src/objects/Publication__c.object
<CustomObject>
    <fields>
        <fullName>ActiveF_RE__c</fullName>
        <formula>IF(AND(SalesStartDate_RE__c&lt;=TODAY(),Sales_Expiration_Date__c&gt;=TODAY()),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Date_Create__c</fullName>
        <description>Date/Time that the publication record was created in CC.</description>
        <inlineHelpText>Date/Time that the publication record was created in CC.</inlineHelpText>
        <label>CC Date Create</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CC_Final_Date_RE__c</fullName>
        <label>CC Final Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CC_PublicationTypeCategory__c</fullName>
        <label>Publication Type Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Publication_ID_RE__c</fullName>
        <description>Integration ID from CC</description>
        <externalId>true</externalId>
        <label>CC Publication ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PreviousEdition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Edition</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Publications</relationshipLabel>
        <relationshipName>PreviousEditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication_Record_SF_ID__c</fullName>
        <formula>Id</formula>
        <label>Publication Record SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Type_ID_RE__c</fullName>
        <externalId>true</externalId>
        <label>Publication Type ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Type__c</fullName>
        <label>Publication Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_On_Website_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish On Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_on_Profiles_Live_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish on Profiles Live Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_on_Profiles_Test_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish on Profiles Test Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_on_Research_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish on Research Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_on_Test_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish on Test Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesStartDate_RE__c</fullName>
        <label>Sales Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Expiration_Date__c</fullName>
        <description>Date the Publication should no longer be available to sell.</description>
        <inlineHelpText>Date the Publication should no longer be available to sell.</inlineHelpText>
        <label>Sales Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year_Issue_RE__c</fullName>
        <label>Year (Issue)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Publication</label>
    <listViews>
        <fullName>Active_Publications</fullName>
        <columns>NAME</columns>
        <columns>Publication_Type__c</columns>
        <columns>Year_Issue_RE__c</columns>
        <columns>ActiveF_RE__c</columns>
        <columns>PreviousEdition__c</columns>
        <columns>CC_Date_Create__c</columns>
        <columns>CC_Final_Date_RE__c</columns>
        <columns>SalesStartDate_RE__c</columns>
        <columns>Sales_Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ActiveF_RE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Publications</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>CC_Publication_ID_RE__c</columns>
        <columns>NAME</columns>
        <columns>Publication_Type__c</columns>
        <columns>Year_Issue_RE__c</columns>
        <columns>Publish_On_Website_RE__c</columns>
        <columns>CC_Date_Create__c</columns>
        <columns>ActiveF_RE__c</columns>
        <columns>SalesStartDate_RE__c</columns>
        <columns>Sales_Expiration_Date__c</columns>
        <columns>Publication_Type_ID_RE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X2018_Publications</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year_Issue_RE__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <label>2018 Publications</label>
    </listViews>
    <listViews>
        <fullName>X2019_Publications</fullName>
        <columns>NAME</columns>
        <columns>ActiveF_RE__c</columns>
        <columns>SalesStartDate_RE__c</columns>
        <columns>Sales_Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year_Issue_RE__c</field>
            <operation>equals</operation>
            <value>2019</value>
        </filters>
        <label>2019 Publications</label>
    </listViews>
    <nameField>
        <label>Publication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Sales_Expiration_not_set_before_Today</fullName>
        <active>true</active>
        <description>The Sales Expiration Date cannot be set to be a date prior to today&apos;s date.</description>
        <errorConditionFormula>AND(ISCHANGED(Sales_Expiration_Date__c),
Sales_Expiration_Date__c  &lt;=  TODAY(),
$Profile.Name!=&quot;System Administrator&quot;)</errorConditionFormula>
        <errorDisplayField>Sales_Expiration_Date__c</errorDisplayField>
        <errorMessage>The Sales Expiration Date cannot be set to be a date prior to today&apos;s date.</errorMessage>
    </validationRules>
</CustomObject>